--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
   </head>
   <body>
     <canvas id="myCanvas" width="1000" height="660"></canvas>
-    <script src="/app.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
